# High-Performance-Gaming-Traffic-Prioritizer

./: .gitattributes  .gitignore  App.hpp  CMakeLists.txt  NetworkEngine.hpp  Processor.hpp  README.md  UI  app.py  eslint.config.mjs  main.cpp  nohup.out  package-lock.json  package.json  start.sh  start_demo.sh  start_release.sh
config/: config.txt  kms.json
demo/: dhcp_demo.cpp  dns_demo.cpp  firewall_demo.cpp  nat_demo.cpp  probe_demo.cpp  scheduler_demo.cpp
doc/: icmp_nat_plan.txt  review_standard.txt
docs/: FUTURE_PLAN.md
include/: App.hpp  Config.hpp  DataPlane.hpp  DhcpEngine.hpp  DnsEngine.hpp  FirewallEngine.hpp  Headers.hpp  Indicator.hpp  NatEngine.hpp  NetworkEngine.hpp  NetworkTypes.hpp  NetworkUtils.hpp  ProbeManager.hpp  Processor.hpp  Scheduler.hpp  SelfTest.hpp  SystemOptimizer.hpp  Telemetry.hpp  Units.hpp  UpnpEngine.hpp
include/GUI/: Dashboard.hpp  StyleSheet.hpp
scripts/web/: fix_nav.js  refactor.js  refactor.py  remove_wifi.js
server/: app.js
server/views/: interfaces.ejs  login.ejs  logs.ejs  qos.ejs  security.ejs
server/views/partials/: sidebar_nav.ejs
src/: App.cpp  Config.cpp  DataPlane.cpp  DhcpEngine.cpp  DnsEngine.cpp  FirewallEngine.cpp  NatEngine.cpp  NetworkEngine.cpp  NetworkTypes.cpp  NetworkUtils.cpp  ProbeManager.cpp  Scheduler.cpp  SelfTest.cpp  SystemOptimizer.cpp  Telemetry.cpp  UpnpEngine.cpp  main.cpp
src/GUI/: Dashboard.cpp
templates/: dashboard.html  dev.html  devices.html  login.html  logs.html  network.html  qos.html
web/: app.js  fix_nav.js  refactor.js  refactor.py  remove_wifi.js
web/views/: dashboard.ejs  dev.ejs  devices.ejs  interfaces.ejs  login.ejs  logs.ejs  more.ejs  network.ejs  qos.ejs  security.ejs  services.ejs  wifi.ejs
web/views/partials/: bottom_nav.ejs  head.ejs  sidebar_nav.ejs
